P2/results/1a/test_fpgaq/Long_Coup_dt0_7_nodes_1_tasks_16_threads-708942-stderr.txt
srun: defined options
srun: -------------------- --------------------
srun: (null)              : n[049-055]
srun: cpus-per-task       : 16
srun: distribution        : block:block
srun: jobid               : 708942
srun: job-name            : Long_Coup_dt0_7_nodes_1_tasks_16_threads
srun: nodes               : 7
srun: ntasks              : 7
srun: ntasks-per-node     : 1
srun: verbose             : 1
srun: -------------------- --------------------
srun: end of defined options
srun: jobid 708942: nodes(7):`n[049-055]', cpu counts: 32(x7)
srun: Implicitly setting --exact, because -c/--cpus-per-task given.
srun: launch/slurm: launch_p_step_launch: CpuBindType=(null type)
srun: launching StepId=708942.0 on host n049, 1 tasks: 0
srun: launching StepId=708942.0 on host n050, 1 tasks: 1
srun: launching StepId=708942.0 on host n051, 1 tasks: 2
srun: launching StepId=708942.0 on host n052, 1 tasks: 3
srun: launching StepId=708942.0 on host n053, 1 tasks: 4
srun: launching StepId=708942.0 on host n054, 1 tasks: 5
srun: launching StepId=708942.0 on host n055, 1 tasks: 6
srun: route/default: init: route default plugin loaded
srun: launch/slurm: _task_start: Node n049, 1 tasks started
srun: launch/slurm: _task_start: Node n052, 1 tasks started
srun: launch/slurm: _task_start: Node n054, 1 tasks started
srun: launch/slurm: _task_start: Node n053, 1 tasks started
srun: launch/slurm: _task_start: Node n051, 1 tasks started
srun: launch/slurm: _task_start: Node n050, 1 tasks started
srun: launch/slurm: _task_start: Node n055, 1 tasks started
srun: Sent KVS info to 7 nodes, up to 1 tasks per node
srun: Sent KVS info to 7 nodes, up to 1 tasks per node
[n054:1085747:0:1085747]       ud_ep.c:268  Fatal: UD endpoint 0x555555a67d70 to <no debug data>: unhandled timeout error
[n050:1103575:0:1103575]       ud_ep.c:268  Fatal: UD endpoint 0x555555a65f80 to <no debug data>: unhandled timeout error

/cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c: [ uct_ud_ep_deferred_timeout_handler() ]
      ...
      265                                      &ep->super.super,
      266                                      UCS_ERR_ENDPOINT_TIMEOUT);
      267     if (status != UCS_OK) {
==>   268         ucs_fatal("UD endpoint %p to "UCT_UD_EP_PEER_NAME_FMT": "
      269                   "unhandled timeout error",
      270                   ep, UCT_UD_EP_PEER_NAME_ARG(ep));
      271     }


/cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c: [ uct_ud_ep_deferred_timeout_handler() ]
      ...
      265                                      &ep->super.super,
      266                                      UCS_ERR_ENDPOINT_TIMEOUT);
      267     if (status != UCS_OK) {
==>   268         ucs_fatal("UD endpoint %p to "UCT_UD_EP_PEER_NAME_FMT": "
      269                   "unhandled timeout error",
      270                   ep, UCT_UD_EP_PEER_NAME_ARG(ep));
      271     }

==== backtrace (tid:1085747) ====
 0 0x000000000007b61b uct_ud_ep_deferred_timeout_handler()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c:268
 1 0x0000000000025f1a ucs_callbackq_slow_proxy()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.c:404
 2 0x000000000004a2ba ucs_callbackq_dispatch()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.h:211
 3 0x000000000004a2ba uct_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/api/uct.h:2589
 4 0x000000000004a2ba ucp_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucp/core/ucp_worker.c:2636
 5 0x00000000000054df mca_pml_ucx_send()  ???:0
 6 0x00000000000bcadb ompi_coll_base_barrier_intra_basic_linear()  ???:0
 7 0x000000000006b950 MPI_Barrier()  ???:0
 8 0x0000000000002330 main()  ???:0
 9 0x0000000000029d90 __libc_start_call_main()  ./csu/../sysdeps/nptl/libc_start_call_main.h:58
10 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:392
11 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:379
12 0x0000000000002865 _start()  ???:0
=================================
[n054:1085747] *** Process received signal ***
[n054:1085747] Signal: Aborted (6)
[n054:1085747] Signal code:  (-6)
[n054:1085747] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x155554e19520]
[n054:1085747] [ 1] /lib/x86_64-linux-gnu/libc.so.6(pthread_kill+0x12c)[0x155554e6d9fc]
[n054:1085747] [ 2] /lib/x86_64-linux-gnu/libc.so.6(raise+0x16)[0x155554e19476]
[n054:1085747] [ 3] /lib/x86_64-linux-gnu/libc.so.6(abort+0xd3)[0x155554dff7f3]
[n054:1085747] [ 4] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x30a37)[0x155554072a37]
[n054:1085747] [ 5] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(ucs_fatal_error_format+0x122)[0x155554072b62]
[n054:1085747] [ 6] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/ucx/libuct_ib.so.0(+0x7b61b)[0x15554f76b61b]
[n054:1085747] [ 7] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x25f1a)[0x155554067f1a]
[n054:1085747] [ 8] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucp.so.0(ucp_worker_progress+0x7a)[0x15554f9ee2ba]
[n054:1085747] [ 9] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/openmpi/mca_pml_ucx.so(mca_pml_ucx_send+0x1bf)[0x1555540bc4df]
[n054:1085747] [10] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(ompi_coll_base_barrier_intra_basic_linear+0x5b)[0x15555548eadb]
[n054:1085747] [11] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(MPI_Barrier+0xb0)[0x15555543d950]
[n054:1085747] [12] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2330)[0x555555556330]
[n054:1085747] [13] /lib/x86_64-linux-gnu/libc.so.6(+0x29d90)[0x155554e00d90]
[n054:1085747] [14] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x80)[0x155554e00e40]
[n054:1085747] [15] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2865)[0x555555556865]
[n054:1085747] *** End of error message ***
==== backtrace (tid:1103575) ====
 0 0x000000000007b61b uct_ud_ep_deferred_timeout_handler()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c:268
 1 0x0000000000025f1a ucs_callbackq_slow_proxy()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.c:404
 2 0x000000000004a2ba ucs_callbackq_dispatch()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.h:211
 3 0x000000000004a2ba uct_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/api/uct.h:2589
 4 0x000000000004a2ba ucp_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucp/core/ucp_worker.c:2636
 5 0x00000000000054df mca_pml_ucx_send()  ???:0
 6 0x00000000000bcadb ompi_coll_base_barrier_intra_basic_linear()  ???:0
 7 0x000000000006b950 MPI_Barrier()  ???:0
 8 0x0000000000002330 main()  ???:0
 9 0x0000000000029d90 __libc_start_call_main()  ./csu/../sysdeps/nptl/libc_start_call_main.h:58
10 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:392
11 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:379
12 0x0000000000002865 _start()  ???:0
=================================
[n050:1103575] *** Process received signal ***
[n050:1103575] Signal: Aborted (6)
[n050:1103575] Signal code:  (-6)
[n050:1103575] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x155554e19520]
[n050:1103575] [ 1] /lib/x86_64-linux-gnu/libc.so.6(pthread_kill+0x12c)[0x155554e6d9fc]
[n050:1103575] [ 2] /lib/x86_64-linux-gnu/libc.so.6(raise+0x16)[0x155554e19476]
[n050:1103575] [ 3] /lib/x86_64-linux-gnu/libc.so.6(abort+0xd3)[0x155554dff7f3]
[n050:1103575] [ 4] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x30a37)[0x155554072a37]
[n050:1103575] [ 5] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(ucs_fatal_error_format+0x122)[0x155554072b62]
[n050:1103575] [ 6] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/ucx/libuct_ib.so.0(+0x7b61b)[0x15554f76b61b]
[n050:1103575] [ 7] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x25f1a)[0x155554067f1a]
[n050:1103575] [ 8] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucp.so.0(ucp_worker_progress+0x7a)[0x15554f9ee2ba]
[n050:1103575] [ 9] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/openmpi/mca_pml_ucx.so(mca_pml_ucx_send+0x1bf)[0x1555540bc4df]
[n050:1103575] [10] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(ompi_coll_base_barrier_intra_basic_linear+0x5b)[0x15555548eadb]
[n050:1103575] [11] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(MPI_Barrier+0xb0)[0x15555543d950]
[n050:1103575] [12] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2330)[0x555555556330]
[n050:1103575] [13] /lib/x86_64-linux-gnu/libc.so.6(+0x29d90)[0x155554e00d90]
[n050:1103575] [14] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x80)[0x155554e00e40]
[n050:1103575] [15] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2865)[0x555555556865]
[n050:1103575] *** End of error message ***
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=708942.0 (status=0x0086).
srun: error: n054: task 5: Aborted (core dumped)
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=708942.0 (status=0x0086).
srun: error: n050: task 1: Aborted (core dumped)
[n051:1085458:0:1085458]       ud_ep.c:268  Fatal: UD endpoint 0x555555a68d30 to <no debug data>: unhandled timeout error

/cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c: [ uct_ud_ep_deferred_timeout_handler() ]
      ...
      265                                      &ep->super.super,
      266                                      UCS_ERR_ENDPOINT_TIMEOUT);
      267     if (status != UCS_OK) {
==>   268         ucs_fatal("UD endpoint %p to "UCT_UD_EP_PEER_NAME_FMT": "
      269                   "unhandled timeout error",
      270                   ep, UCT_UD_EP_PEER_NAME_ARG(ep));
      271     }

==== backtrace (tid:1085458) ====
 0 0x000000000007b61b uct_ud_ep_deferred_timeout_handler()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/ib/ud/base/ud_ep.c:268
 1 0x0000000000025f1a ucs_callbackq_slow_proxy()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.c:404
 2 0x000000000004a2ba ucs_callbackq_dispatch()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucs/datastruct/callbackq.h:211
 3 0x000000000004a2ba uct_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/uct/api/uct.h:2589
 4 0x000000000004a2ba ucp_worker_progress()  /cm/shared/ex3-modules/202309a/defq/src/ucx-1.12.1/src/ucp/core/ucp_worker.c:2636
 5 0x00000000000054df mca_pml_ucx_send()  ???:0
 6 0x00000000000bcadb ompi_coll_base_barrier_intra_basic_linear()  ???:0
 7 0x000000000006b950 MPI_Barrier()  ???:0
 8 0x0000000000002330 main()  ???:0
 9 0x0000000000029d90 __libc_start_call_main()  ./csu/../sysdeps/nptl/libc_start_call_main.h:58
10 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:392
11 0x0000000000029e40 __libc_start_main_impl()  ./csu/../csu/libc-start.c:379
12 0x0000000000002865 _start()  ???:0
=================================
[n051:1085458] *** Process received signal ***
[n051:1085458] Signal: Aborted (6)
[n051:1085458] Signal code:  (-6)
[n051:1085458] [ 0] /lib/x86_64-linux-gnu/libc.so.6(+0x42520)[0x155554e19520]
[n051:1085458] [ 1] /lib/x86_64-linux-gnu/libc.so.6(pthread_kill+0x12c)[0x155554e6d9fc]
[n051:1085458] [ 2] /lib/x86_64-linux-gnu/libc.so.6(raise+0x16)[0x155554e19476]
[n051:1085458] [ 3] /lib/x86_64-linux-gnu/libc.so.6(abort+0xd3)[0x155554dff7f3]
[n051:1085458] [ 4] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x30a37)[0x155554072a37]
[n051:1085458] [ 5] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(ucs_fatal_error_format+0x122)[0x155554072b62]
[n051:1085458] [ 6] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/ucx/libuct_ib.so.0(+0x7b61b)[0x15554f76b61b]
[n051:1085458] [ 7] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucs.so.0(+0x25f1a)[0x155554067f1a]
[n051:1085458] [ 8] /cm/shared/ex3-modules/202309a/defq/pkgs/ucx-1.12.1/lib/libucp.so.0(ucp_worker_progress+0x7a)[0x15554f9ee2ba]
[n051:1085458] [ 9] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/openmpi/mca_pml_ucx.so(mca_pml_ucx_send+0x1bf)[0x1555540bc4df]
[n051:1085458] [10] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(ompi_coll_base_barrier_intra_basic_linear+0x5b)[0x15555548eadb]
[n051:1085458] [11] /cm/shared/ex3-modules/202309a/defq/pkgs/openmpi-4.1.6/lib/libmpi.so.40(MPI_Barrier+0xb0)[0x15555543d950]
[n051:1085458] [12] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2330)[0x555555556330]
[n051:1085458] [13] /lib/x86_64-linux-gnu/libc.so.6(+0x29d90)[0x155554e00d90]
[n051:1085458] [14] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0x80)[0x155554e00e40]
[n051:1085458] [15] /home/krisor99/SpMV-Comm-Strats/P2/build/Debug/1a(+0x2865)[0x555555556865]
[n051:1085458] *** End of error message ***
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=708942.0 (status=0x0086).
srun: error: n051: task 2: Aborted (core dumped)
srun: Complete StepId=708942.0+0 received
srun: Job step aborted: Waiting up to 32 seconds for job step to finish.
slurmstepd: error: *** JOB 708942 ON n049 CANCELLED AT 2025-03-10T18:56:06 DUE TO TIME LIMIT ***
slurmstepd: error: *** STEP 708942.0 ON n049 CANCELLED AT 2025-03-10T18:56:06 DUE TO TIME LIMIT ***
